backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  selector:
    app: backend
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
...
