frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-frontend
spec:
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
...
